--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-calendars": "^1.1294.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-config": "1.4.6",
+    "react-native-date-picker": "^4.2.10",
     "react-native-exception-handler": "2.10.10",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "2.5.0",
