--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-hook-form": "7.35.0",
     "react-native": "0.69.6",
+    "react-native-background-timer": "^2.4.1",
     "react-native-calendars": "^1.1294.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-config": "1.4.6",
