resolved sonar issues

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,2 @@
 sonar.projectKey=tracker-frontend-mobile
-sonar.exclusions=test/**, node_modules/**, android/**, ios/**
+sonar.exclusions=test/**, node_modules/**, android/**, ios/**, __tests__/**, coverage/**
