--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,13 @@
 sonar.projectKey=tracker-frontend-m
-sonar.exclusions=test/**, node_modules/**, android/**, ios/**, __tests__/**, coverage/**
+sonar.exclusions=test/**, node_modules/**, android/**, ios/**, __tests__/**, coverage/**, e2e/**
+
+# Source
+sonar.sources=src
+# Where to find tests file, also src
+sonar.tests=src
+# But we get specific here
+# We don't need to exclude it in sonar.sources because it is automatically taken care of
+sonar.test.inclusions=__tests__/**/*.spec.js,__tests__/**/*.spec.jsx,__tests__/**/*.test.js,__tests__/**/*.test.jsx
+
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.testExecutionReportPaths=coverage/clover.xml
