--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,10 +4,7 @@ sonar.exclusions=test/**, node_modules/**, android/**, ios/**, __tests__/**, cov
 # Source
 sonar.sources=src
 # Where to find tests file, also src
-sonar.tests=src
+sonar.tests=__tests__
 # But we get specific here
 # We don't need to exclude it in sonar.sources because it is automatically taken care of
 sonar.test.inclusions=__tests__/**/*.spec.js,__tests__/**/*.spec.jsx,__tests__/**/*.test.js,__tests__/**/*.test.jsx
-
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.testExecutionReportPaths=coverage/clover.xml
