--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=tracker-frontend-m
-sonar.exclusions=test/**, node_modules/**, android/**, ios/**, __tests__/**, coverage/**
+sonar.exclusions=test/**, node_modules/**, android/**, ios/**, __tests__/**, coverage/**, e2e/**
+sonar.coverage.exclusions=src/**
 sonar.sources=src
 sonar.language=ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
