--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=tracker-frontend-m
-sonar.exclusions=test/**, node_modules/**, android/**, ios/**, __tests__/**, coverage/**, e2e/**
+sonar.exclusions=node_modules/**, android/**, ios/**, __tests__/**, coverage/**, e2e/**
 sonar.coverage.exclusions=src/**/**.stories.tsx,src/**/styles.ts,src/redux/**,src/utils/**,src/services/**,src/theme/**,src/routes/**,src/screens/**, src/components/**,src/components/organisms/**,
 sonar.sources=src
 sonar.language=ts
