--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=tracker-frontend-m
-sonar.exclusions=node_modules/**, android/**, ios/**, __tests__/**, coverage/**, e2e/**
+sonar.exclusions=node_modules/**, android/**, ios/**, coverage/**, e2e/**
 sonar.sources=src
 sonar.language=ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
