--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=tracker-frontend-m
 sonar.exclusions=node_modules/**, android/**, ios/**, coverage/**, e2e/**
+sonar.coverage.exclusions=src/**/**.stories.tsx, src/redux/**, src/utils/**, src/services/**, src/theme/**, src/routes/**, src/screens/**,
 sonar.sources=src
 sonar.language=ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
