--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=tracker-frontend-m
 sonar.exclusions=node_modules/**, android/**, ios/**, coverage/**, e2e/**
-sonar.coverage.exclusions=src/**/**.stories.tsx, src/redux/**, src/utils/**, src/services/**, src/theme/**, src/routes/**, src/screens/**,  src/components/organisms/**, src/components/molecules/ExpenseListitem/**.**, src/components/molecules/TodoListitem/**.**,
+sonar.coverage.exclusions=src/**/**.stories.tsx, src/redux/**, src/utils/**, src/services/**, src/theme/**, src/routes/**, src/screens/**,  src/components/organisms/**, src/components/molecules/ExpenseListitem/**.tsx, src/components/molecules/ExpenseListitem/**.ts, src/components/molecules/TodoListitem/**.tsx, src/components/molecules/TodoListitem/**.ts
 sonar.sources=src
 sonar.language=ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
